--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
           port: 22
           script: |
             systemctl stop go-deploy
-      - name: Copy binary to Server
+      - name: Copy Binary File to Server
         uses: appleboy/scp-action@v0.1.2
         with:
           host: ${{ secrets.SERVER_IP }}
